Level 1 Completed: Added CRUD operations, filtering, and soft delete.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
-spring.application.name=library-management
+# Uygulama Ad\u0131
+spring.application.name=LibraryManagement
+
+# H2 Veritaban\u0131 Ayarlar\u0131 (Bellek i\u00e7i veritaban\u0131)
+spring.datasource.url=jdbc:h2:mem:librarydb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+
+# H2 Konsolunu aktif et (Taray\u0131c\u0131dan veritaban\u0131n\u0131 g\u00f6rmek i\u00e7in)
+spring.h2.console.enabled=true
+
+# JPA/Hibernate Ayarlar\u0131
+# Tablolar\u0131 entity s\u0131n\u0131flar\u0131na g\u00f6re otomatik olu\u015ftur
+spring.jpa.hibernate.ddl-auto=update
+# SQL sorgular\u0131n\u0131 konsolda g\u00f6ster (Debug i\u00e7in \u00e7ok \u00f6nemli)
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
