--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
+                <start-class>com.tuwennie.library_management.LibraryManagementApplication</start-class>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -63,6 +64,10 @@
 			<artifactId>spring-boot-starter-webmvc-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+                <dependency>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter-security</artifactId>
+                 </dependency>
 	</dependencies>
 
 	<build>
