--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,13 @@
-# Uygulama Ad\u0131
-spring.application.name=LibraryManagement
+spring.application.name=library-management
 
-# H2 Veritaban\u0131 Ayarlar\u0131 (Bellek i\u00e7i veritaban\u0131)
-spring.datasource.url=jdbc:h2:mem:librarydb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
+# MySQL Ba\u011flant\u0131s\u0131
+spring.datasource.url=jdbc:mysql://localhost:3306/library_db?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=sEiKa/09
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# H2 Konsolunu aktif et (Taray\u0131c\u0131dan veritaban\u0131n\u0131 g\u00f6rmek i\u00e7in)
-spring.h2.console.enabled=true
-
-# JPA/Hibernate Ayarlar\u0131
-# Tablolar\u0131 entity s\u0131n\u0131flar\u0131na g\u00f6re otomatik olu\u015ftur
+# Hibernate Ayarlar\u0131
 spring.jpa.hibernate.ddl-auto=update
-# SQL sorgular\u0131n\u0131 konsolda g\u00f6ster (Debug i\u00e7in \u00e7ok \u00f6nemli)
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+# Hata buradayd\u0131, a\u015fa\u011f\u0131daki sat\u0131r art\u0131k tertemiz:
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
