--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,15 @@
                         <groupId>org.springframework.boot</groupId>
                         <artifactId>spring-boot-starter-security</artifactId>
                  </dependency>
+                 <dependency>
+                        <groupId>org.springdoc</groupId>
+                        <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+                        <version>2.3.0</version>
+                 </dependency>
+                 <dependency>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter-validation</artifactId>
+                 </dependency>
 	</dependencies>
 
 	<build>
